<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="ST_STAT_EPICS" Id="{6d9583db-fbc6-4b57-83c8-8f61b33208e9}">
    <Declaration><![CDATA[TYPE ST_STAT_EPICS :
STRUCT
	
	bError:BOOL:=FALSE;
	nErrorId:UDINT:=0;
	bEnabled:BOOL:=FALSE;
	eTargetState: TARGET_STATE_MACHINE;
    sErrorStr:STRING:='NO ERROR';
	fActTorque:LREAL:=0;
	fActPos:LREAL:=0;
	fActVel:LREAL:=0;	
	fActTemp:LREAL:=0;
	fSetVelRaw:LREAL;
	fBrakeActTemp1:LREAL;
	fBrakeActTemp2:LREAL;
	bBrake1TempAlarm:BOOL;
	bBrake2TempAlarm:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>