<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <GVL Name="GVL_ErrorCodes" Id="{2a5675cd-f9a5-4b29-8d57-a071f0a61152}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	nErrorCodeOKId:INT:=0;
	nErrorCodeOKStr:STRING:='NO ERROR\n';
	nErrorNoLatchId:INT:=1000;
	sErrorNoLatchStr:STRING:='NO LATCH FROM DRIVE\n';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>